--- a/asgn1/asgn1.css
+++ b/asgn1/asgn1.css
@@ -21,33 +21,55 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE. */
 /* make page body colored */
 body {
-    background-color: #f4e19c ; /* Change this value to set the background color */
-    margin: 0;
-    padding: 0;
+    background-color: #f4e19c; /* Change this value to set the background color */
+    margin: 1em;
+    padding: 1em;
     font-family: 'Fredoka One', cursive;
-  }
+
+    /* background-image: url("./src/duck-transparent-bg.png"); */
+    background-repeat: repeat;
+}
+
 h1 {
     color: #ff8108;
     text-align: center;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 2.5em;
+    background-color: #f4e19c;
+
 }
+
 p {
     font-family: sans-serif;
 }
 
 .container {
     display: flex; /* Set container to use flexbox */
+    justify-content: center;
+    align-items: center;
+    /* width: 100%; /* Adjusted to take full width */
+    /* height: 100vh; Adjusted to take full viewport height */ 
+    align-items: flex-start; /* Align items to the top of the container */
 }
 
+.item1 {
+    /* margin: 10px; Add some margin for spacing */
+    padding: 3em; /* Add padding for content */
+    border-radius: 10px; /* Adjust the value to control the roundness of corners */
+
+}
 .item {
-    margin: 10px; /* Add some margin for spacing */
-    padding: 20px; /* Add padding for content */
-    background-color: #f0f0f0; /* Add background color for clarity */
-    border: 1px solid #ccc; /* Add border for clarity */
+    /* margin: 10px; Add some margin for spacing */
+    padding: 2em; /* Add padding for content */
+    padding-left: 5em;
+    border-radius: 10px; /* Adjust the value to control the roundness of corners */
+    background-color: #f4e19c;
 }
 
 .slider-container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
 }
 
@@ -56,28 +78,28 @@ p {
 }
 
 #webgl {
-    display: inline-block;
+    /* display: inline-block; */
     margin: 0 auto;
 }
 
 .button-23 {
-  background-color: #f4cf47;
-  border: 2px solid #222222;
-  border-radius: 8px;
-  box-sizing: border-box;
-  color: #222222;
-  cursor: pointer;
-  display: inline-block;
-  margin: 0;
-  outline: none;
-  position: relative;
-  text-align: center;
-  text-decoration: none;
-  touch-action: manipulation;
-  transition: box-shadow .2s,-ms-transform .1s,-webkit-transform .1s,transform .1s;
-  user-select: none;
-  -webkit-user-select: none;
-  width: auto;
+    background-color: #f4cf47;
+    border: 2px solid #222222;
+    border-radius: 8px;
+    box-sizing: border-box;
+    color: #222222;
+    cursor: pointer;
+    display: inline-block;
+    margin: 0;
+    outline: none;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    touch-action: manipulation;
+    transition: box-shadow .2s, -ms-transform .1s, -webkit-transform .1s, transform .1s;
+    user-select: none;
+    -webkit-user-select: none;
+    width: auto;
 }
 
 .button-23:focus-visible {
@@ -636,7 +658,7 @@ p {
 
 
 /* æœ¬ä½“ã¨é–¢ä¿‚ãªã„ã‚¹ã‚¿ã‚¤ãƒ« */
-.container{
+/* .container{
     width : 100% ;
     height : 600px ;
     display : flex ;
@@ -644,7 +666,7 @@ p {
     justify-content : center ;
     align-items : center ;
     background : #FFF ;
-}
+} */
 .button:not(:last-child){
     margin-bottom : 80px ;
 }
