--- a/asgn5/asgn5.css
+++ b/asgn5/asgn5.css
@@ -6,6 +6,8 @@ body {
     width: 100%;
     height: 100%;
     display: block;
+    /* background: url(./assets/skybox/nightsky.jpeg) no-repeat center center;
+    background-size: cover; */
 }
 #loading {
     position: fixed;
