where is my light???

--- a/asgn4/blockyanimal.css
+++ b/asgn4/blockyanimal.css
@@ -15,7 +15,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url("./src/restaurant.png");
+    /* background-image: url("./src/restaurant.png"); */
     background-size: cover;
     background-position: center;
     filter: blur(2px) brightness(50%); /* Adjust blur and brightness values as needed */
